# rust-exercises

./: .gitignore  flake.nix
dioxus/terminal/: Cargo.toml
dioxus/terminal/src/: main.rs
dioxus/web/: Cargo.toml
dioxus/web/src/: main.rs
my-own/axum-hello-world/: Cargo.toml
my-own/axum-hello-world/locales/: de.yml  en.yml  es.yml  fr.yml
my-own/axum-hello-world/src/: main.rs
my-own/own-ratatui-hello-world/: Cargo.toml
my-own/own-ratatui-hello-world/src/: main.rs
ratatui/counter-app/: Cargo.toml
ratatui/counter-app/src/: app.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
ratatui/hello-world/: Cargo.toml
ratatui/hello-world/src/: main.rs
ratatui/json-editor/: Cargo.toml
ratatui/json-editor/src/: app.rs  main.rs  ui.rs
rust-book/ch3/fibonacci/src/: main.rs
rust-book/ch3/temp-converter/: Cargo.toml
rust-book/ch3/temp-converter/src/: unit.rs
rust-book/ch3/twelve-days/src/: main.rs
rust-book/ch8/employees/: Cargo.toml
rust-book/ch8/pig-latin/src/: main.rs  piglatin.rs
rust-book/ch8/stats/: Cargo.toml
rust-book/ch8/stats/src/: main.rs  stats.rs
rust-book/employees/: Cargo.toml
rust-book/employees/src/: .#ui.rs  data.rs  main.rs  models.rs  scene.rs  types.rs  ui.rs  util.rs
rust-book/guessing-game/: Cargo.toml
rust-book/guessing-game/src/: app.rs  constants.rs  event.rs  game.rs  history.rs  level.rs  main.rs  message.rs  ui.rs  util.rs
temp-converter/: Cargo.toml
temp-converter/src/: main.rs  unit.rs
