[package]
name = "axum-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.7.4", features=["query"]}
serde = { version="1.0.195", features=["derive"]}
tokio = { version="1.35.1", features=["full"]}
