[package]
name = "employees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
map-macro = "0.2.6"
ratatui = {version = "0.25.0", features = ["unstable-segment-size"]}
strum = { version = "0.25", features = ["derive"] }
